--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <h1 class="titulos" style="margin-top:30px;font-size: 30px;">Proyectos</h1>
                 </a>
                 <div id="tutoriales">
-                    <div class="tutorial">
+                    <div class="tutorial" id="tutorial1" >
                         <div class="infoTutorial" style="background-image: url(https://m.media-amazon.com/images/I/41s+CeK5TYL.jpg);">
                             <a href="">
                                 <div class="capaOscura">
@@ -273,7 +273,7 @@
                         <small style="color:white;text-align: left;">Creado por Joaquín Erenas</small>
 
                     </div>
-                    <div class="tutorial">
+                    <div class="tutorial" id="tutorial2">
                         <div class="infoTutorial" style="background-image: url(media/proyectoJava.png);">
                             <a href="">
                                 <div class="capaOscura">
