--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h1 class="titulos" style="margin-top:30px;font-size: 30px;">Estudios</h1>
                 <div id="estudios">
                     
-                    <div class="estudio">
+                    <div class="estudio" id="estudioEso">
                         <div>
                             <img src="media/eso_logo.png" class="iconoEstudios" alt="eso">
                         </div>
@@ -187,7 +187,7 @@
                         <p style="color:white">2014-2018</p>
                         <h4 style="color:white">IES Neil Armstrong</h4>
                     </div>
-                    <div class="estudio">
+                    <div class="estudio" id="estudioMedio">
                         <div>
                             <img src="media/medio_logo.png" class="iconoEstudios" alt="grado_medio">
                         </div>
@@ -195,7 +195,7 @@
                         <p style="color:white">2019-2020</p>
                         <h4 style="color:white">IIT Calderón de la Barca</h4>
                     </div>
-                    <div class="estudio">
+                    <div class="estudio" id="estudioSuperior">
                         <div>
                             <img src="media/superior_logo.png" class="iconoEstudios" alt="grado_superior">
                         </div>
