--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Inicio | Joaquín Erenas </title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="media/logo.png">
         <link rel="stylesheet" type="text/css" href="estilo.css">
         <link rel="stylesheet" type="text/css" href="menuExtra.css">
