--- a/index.html
+++ b/index.html
@@ -37,29 +37,29 @@
         </nav>
 
         <header>
+            <!--
             <a href="index.html">
                 <img src="media/logoPrincipal.png" id="logoPrincipal" alt="logo">
-            </a>
+            </a>-->
 
             <a title="Página de inicio" id="logo">
-                JE
+                <span style="color:#3296d8">&lt;</span>&nbsp;JE /<span style="color:#3296d8">&gt;</span>
             </a>
 
             <div id="opciones">
-                <a title="Página de inicio de Appgen" class="menuOpciones" href="index.html">
+                <a title="Inicio" class="menuOpciones" href="index.html">
                     INICIO
 
                 </a>
-                <a title="Página de información" class="menuOpciones"  href="#proyectos">
-                    PROYECTOS
-
-                </a>
-                <a class="menuOpciones"  href="#curriculum">
-                    CURRICULUM
-
-                </a>
-                <a class="menuOpciones" href="#servicios" id="menuOpciones"  style="padding-right: 60px;">
+                <a title="Servicios ofrecidos" class="menuOpciones"  href="#proyectos">
                     SERVICIOS
+
+                </a>
+                <a title="Proyectos personales" class="menuOpciones" href="#servicios" id="menuOpciones">
+                    PROYECTOS
+                </a>
+                <a title="Proyectos personales" class="menuOpciones" href="#servicios" id="menuOpciones"  style="padding-right: 60px;">
+                    CONTACTAR
                 </a>
             </div>
 
