--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     </head>
     <body>
         <script src="sticky.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+        <script>
+            $("document").ready( function () {
+                alert("El portfolio se encuentra en mantenimiento, discuplen las molestias.");
+            }); 
+        </script>
+        
         
         <div class="hamburger">
             <span class="bar"></span>
@@ -277,7 +284,7 @@
                     </div>
                     <div class="tutorial" id="tutorial2">
                         <div class="infoTutorial" style="background-image: url(media/proyectoJava.png);">
-                            <a href="">
+                            <a href="https://www.youtube.com/watch?v=CaygKA9VqyY" target="_blank">
                                 <div class="capaOscura">
                                     <img src="media/logo_lupa.png" alt="lupa">   
 
