--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Inicio | Joaquín Erenas </title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=0.4">
+        <meta name="viewport" content="width=device-width, initial-scale=0.6">
         <link rel="shortcut icon" href="icon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="slider.css">
@@ -15,11 +15,12 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+        <!--
         <script>
             $("document").ready( function () {
                 alert("El portfolio se encuentra inoperativo debido a su mantenimiento. Disculpen las molestias.");
             }); 
-        </script>
+        </script>-->
 
         <header>
             <div id="headerCentral"> 
@@ -130,7 +131,7 @@
                         <div id="videoJuego">
 
                         </div>
-                        <img style="width: 600px; height: 600px;position: relative;top:-40px;transform: skew(-18deg);" src="manoMovil.png">
+                        <img style="width: 600px; height: 600px;position: relative;top:-40px;transform: skew(-18deg);" id="manoMovil" src="manoMovil.png">
                     </div>
                 </div>
               </div>
