--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Inicio | Joaquín Erenas </title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=0.7">
+        <meta name="viewport" content="width=device-width, initial-scale=0.5">
         <link rel="shortcut icon" href="icon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="slider.css">
@@ -38,7 +38,7 @@
             </div>
         </header>
 
-        <section class="seccion" style="padding-bottom:150px;" id="primeraSeccion">
+        <section class="seccion" id="primeraSeccion">
             <div>
     
             </div>
