--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-        <!--
+
         <script>
             $("document").ready( function () {
                 alert("El portfolio se encuentra inoperativo debido a su mantenimiento. Disculpen las molestias.");
             }); 
-        </script>-->
+        </script>
 
         <header>
             <div id="headerCentral"> 
