--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <script src="sticky.js"></script>
-
+        <script src="habilidades.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 
