--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </script>
 
         <header>
-            <div id="headerCentral"> 
+            <div> 
                 <div id="layoutTop">
                     <div id="layoutIzq">
                         <h1>Joaquín Erenas</h1>
