--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="gridEstudios">
                     <div>
                         <div class="imagenEstudio" id="eso">
-                            <img src="instituto.png">
+                            <img src="python.png">
                         </div>
                         <h3>Curso profesional de Python</h3>
                         <h4>códigofacilito</h4>
@@ -320,7 +320,7 @@
                     </div>
                     <div>
                         <div class="imagenEstudio">
-                            <img src="smr.png">
+                            <img src="sql.png">
                         </div>
                         <h3>Curso profesional de base de datos&nbsp;&nbsp;</h3>
                         <h4>códigofacilito</h4>
@@ -329,7 +329,7 @@
                     </div>
                     <div>
                         <div class="imagenEstudio">
-                            <img src="daw.png">
+                            <img src="ingles.png">
                         </div>
                         <h3>Cambridge C1</h3>
                         <h4>IES Neil Armstrong</h4>
@@ -337,7 +337,7 @@
                     </div>  
                     <div>
                         <div class="imagenEstudio">
-                            <img src="daw.png">
+                            <img src="freecodecamp.png" style="filter:invert(100%);">
                         </div>
                         <h3>Responsive Web Design</h3>
                         <h4>freeCodeCamp</h4>
