--- a/index.html
+++ b/index.html
@@ -124,20 +124,14 @@
                 </div>
                 <div class="item6" id="fondoCuadroJuegos">
                     <div id="textoJuegos">
-                        <h1>Aplicaciones móviles<br>y juegos personalizados.</h1>
+                        <h1>Desarrollo de videojuegos </h1>
                         <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
-                    </div>
-                    <div>
-                        <div id="videoJuego">
-
-                        </div>
-                        <img style="width: 600px; height: 600px;position: relative;top:-40px;transform: skew(-18deg);" id="manoMovil" src="manoMovil.png">
                     </div>
                 </div>
               </div>
         </section>
 
-        <div class="separadores" style="background-color: #231F20;">
+        <div class="separadores"  id="activadorHabs" style="background-color: #231F20;">
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M-1.69,-0.48 C109.47,-1.47 304.17,147.52 501.12,-1.47 L500.00,150.00 L-3.38,154.43 Z" style="stroke: none; fill: #101014;"></path>
             </svg>
@@ -150,7 +144,7 @@
                     <h2 id="fraseSuperiorSeccion">Mis habilidades.</h2>
                 </div>
             </div>
-            <article class="articulo" style="margin-top:80px;">
+            <article class="articulo"  style="margin-top:80px;">
                 <div>
                     <h1 class="tipoHabilidades">Basadas en mi trabajo</h1>
                     <div class="habilidades">
