--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                 <h1>Joaquín Erenas</h1>
                 <h4>Desarrollador <span style="color:#1985A1">web</span></h4>
 
-                <button class="botonContacto">Obtener currículum</button>
+                <button class="botonContacto" onclick="document.getElementById('link').click()">Obtener currículum</button>
+                <a id="link" href="./CV_Erenas_Joaquin.pdf" target="_blank" download hidden></a>
             </div>
         </section>
 
