--- a/index.html
+++ b/index.html
@@ -98,17 +98,15 @@
                 <h1>Joaquín Erenas</h1>
                 <h4>Desarrollador <span style="color:#1985A1">web</span></h4>
 
-                <button class="botonContacto" onclick="document.getElementById('link').click()">Obtener currículum</button>
-                <a id="link" href="./CV_Erenas_Joaquin.pdf" target="_blank" download hidden></a>
+                <button class="botonContacto">Obtener currículum</button>
             </div>
         </section>
 
 
         
-        <div class="separadores" style="background-color: #FDFFFF;margin-top: 0px;">
+        <div class="separadores">
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M 0,600 C 0,600 0,200 0,200 C 78.67179487179487,197.77692307692308 157.34358974358975,195.55384615384614 247,179 C 336.65641025641025,162.44615384615386 437.2974358974359,131.56153846153845 523,142 C 608.7025641025641,152.43846153846155 679.4666666666667,204.2 743,236 C 806.5333333333333,267.8 862.8358974358974,279.6384615384615 932,272 C 1001.1641025641026,264.3615384615385 1083.1897435897436,237.24615384615385 1170,222 C 1256.8102564102564,206.75384615384615 1348.4051282051282,203.37692307692308 1440,200 C 1440,200 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="#231f2088" class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
-                <path d="M-1.12,84.37 C203.72,167.27 349.20,-49.98 518.05,24.17 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #111111;"></path>
+                <path d="M-1.12,84.37 C203.72,167.27 349.20,-49.98 518.05,24.17 L500.00,150.00 L0.00,150.00 Z"></path>
             </svg>
         </div>
 
@@ -242,11 +240,12 @@
                 </div>
                 
             </div>
+            <!--
             <div class="separadores" style="background-color: #111316">
                 <svg viewBox="0 0 500 150" preserveAspectRatio="none" id="activadorHabs" style="height: 100%; width: 100%;">
                     <path d="M-1.12,84.37 C203.72,167.27 349.20,-49.98 518.05,24.17 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #0c0c0c;"></path>
                 </svg>
-            </div>
+            </div>-->
         </section>
 
         <section id="segundaSeccion">
