--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         </header>
 
         <section id="primeraSeccion">
+            <div id="imagenPresentacion">
+                <img src="./retrato.png">
+            </div>
             <div id="presentacionNombre">
                 <h1>Joaquín Erenas</h1>
                 <h4>Desarrollador <span style="color:#1985A1">web</span></h4>
@@ -84,7 +87,7 @@
             </svg>
         </div>
 
-        <section style="background-color: #111111;padding-bottom: 100px;">
+        <section id="seccionServicios">
             <div id="tituloSeccion">
                 <div>
                     <h4 id="tituloSuperiorSeccion">Servicios</h4>
@@ -147,7 +150,7 @@
                 </div>
                 <div class="item6" id="fondoCuadroJuegos">
                     <div>
-                        <h1>Desarrollo de videojuegos</h1>
+                        <h1>Demostración de videojuego</h1>
                         <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
                     </div>
                     <div>
