--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </script>
         <script>
             $("document").ready( function () {
-                alert("El portfolio se encuentra inoperativo debido a su mantenimiento y actualización. Para más información contactar al siguiente correo electrónico: joaquinerenas23@gmail.com. Disculpen las molestias.");
+                alert("El portfolio se encuentra en mantenimiento. Si desea más información sobre mis proyectos, por favor, escribe al siguiente correo: joaquinerenas23@gmail.com. Disculpen las molestias.");
             }); 
         </script>
 
@@ -73,11 +73,11 @@
                         <a id="escribirCorreo" href="mailto:joaquinerenas23@gmail.com?Subject=Propuesta%20de%20colaboración." hidden></a>
                     </div>
                     <div class="configuraciones">
-                        <div id="configuracionTema">
-                            <button type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+                        <button id="configuracionIdioma" onclick="idioma()" title="Cambiar idioma español/inglés">En</button>
+                    </div>
+                    <div id="configuracionTema">
+                        <button type="button" name="dark_light" onclick="toggleDarkLight()" title="Modo claro/oscuro"></button>
 
-                        </div>
-                        <button id="configuracionIdioma" onclick="idioma()">En</button>
                     </div>
 
 
@@ -147,7 +147,7 @@
                 <div class="item6" id="fondoItem6">
                     <div>
                         <h1>Demostración de página web</h1>
-                        <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
+                        <p>Páginas web personalizadas dedicadas a satisfacer las necesidades del cliente.</p>
                     </div>
                     <div>
                         <div id="videoDemo" class="web">
@@ -173,8 +173,8 @@
                 </div>
                 <div class="item6" id="fondoCuadroJuegos">
                     <div>
-                        <h1>Demostración de videojuego</h1>
-                        <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
+                        <h1>Juegos personalizados</h1>
+                        <p>Desarrollo de videojuegos de forma amateur con las caracterísitas deseadas.</p>
                     </div>
                     <div>
                         <div id="videoDemo" class="juego">
@@ -207,7 +207,7 @@
                         
                         </div>
                         <div class="side back">
-                            <h1>holaaa</h1>
+
                         </div>
 
                     </div>
@@ -242,12 +242,6 @@
                 </div>
                 
             </div>
-            <!--
-            <div class="separadores" style="background-color: #111316">
-                <svg viewBox="0 0 500 150" preserveAspectRatio="none" id="activadorHabs" style="height: 100%; width: 100%;">
-                    <path d="M-1.12,84.37 C203.72,167.27 349.20,-49.98 518.05,24.17 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #0c0c0c;"></path>
-                </svg>
-            </div>-->
         </section>
 
         <section id="segundaSeccion">
@@ -415,12 +409,9 @@
                 <div class="box">
                     <h2>SÍGUEME !</h2>
                     <div class="red-social">
-                        <a href="#">
-                            <i class="fa-brands fa-facebook-f"></i>
+                        <a href="https://www.youtube.com/channel/UCVxNR7l33D1pjevToroBbvA" target="_blank">
+                            <img src="./youtube.png">
                         </a>
-                        <a href="#" class="fa-solid fa-instagram"></a>
-                        <a href="#" class="fa-solid fa-twitter"></a>
-                        <a href="#" class="fa-solid fa-github"></a>
                     </div>
                 </div>
             </div>
