--- a/indexEn.html
+++ b/indexEn.html
@@ -42,7 +42,7 @@
         </script>
         <script>
             $("document").ready( function () {
-                alert("The portfolio is inoperative due to its maintenance and updating. For more information contact the following email: joaquinerenas23@gmail.com. Sorry for the inconvenience.");
+                alert("The portfolio is under maintenance. If you want more information about my projects, please write to the following email: joaquinerenas23@gmail.com. Sorry for the inconvenience.");
             }); 
         </script>
 
@@ -75,10 +75,11 @@
                         <a id="escribirCorreo" href="mailto:joaquinerenas23@gmail.com?Subject=Collaboration%20proposal." hidden></a>
                     </div>
                     <div class="configuraciones">
-                        <div id="configuracionTema">
-                            <button type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
-                        </div>
-                        <button id="configuracionIdioma" onclick="idioma()">Es</button>
+                        <button id="configuracionIdioma" onclick="idioma()" title="Change language to spanish">Es</button>
+                    </div>
+                    <div id="configuracionTema">
+                        <button type="button" name="dark_light" onclick="toggleDarkLight()" title="Dark mode or light mode"></button>
+
                     </div>
 
                 </div>
@@ -146,7 +147,7 @@
                 <div class="item6" id="fondoItem6">
                     <div>
                         <h1>Webpage demo</h1>
-                        <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
+                        <p>Custom web pages dedicated to satisfy customer needs.</p>
                     </div>
                     <div>
                         <div id="videoDemo" class="web">
@@ -164,7 +165,7 @@
                 </div>
                 <div class="item8">
                     <h2 id="cuadroColor1">✓</h2>
-                    <h4 class="explicacion_NumGrid">Código válido</h4>
+                    <h4 class="explicacion_NumGrid">Valid code</h4>
                 </div>
                 <div class="item8">
                     <h2>✘</h2>
@@ -173,7 +174,7 @@
                 <div class="item6" id="fondoCuadroJuegos">
                     <div>
                         <h1>Videogame demo</h1>
-                        <p>Blalalalallalablblalba lbalbalbalbla lbalbalblal<br>jsadjasjdjajsdj</p>
+                        <p>Personalized amateur mobile or computer video games.</p>
                     </div>
                     <div>
                         <div id="videoDemo" class="juego">
@@ -206,7 +207,7 @@
                         
                         </div>
                         <div class="side back">
-                            <h1>holaaa</h1>
+
                         </div>
 
                     </div>
@@ -414,12 +415,10 @@
                 <div class="box">
                     <h2>FOLLOW ME !</h2>
                     <div class="red-social">
-                        <a href="#">
-                            <i class="fa-brands fa-facebook-f"></i>
+                        <a href="https://www.youtube.com/channel/UCVxNR7l33D1pjevToroBbvA" target="_blank">
+                            <img src="./youtube.png">
                         </a>
-                        <a href="#" class="fa-solid fa-instagram"></a>
-                        <a href="#" class="fa-solid fa-twitter"></a>
-                        <a href="#" class="fa-solid fa-github"></a>
+
                     </div>
                 </div>
             </div>
